# rustcleaner

./: Cargo.toml  README.md
src/: cleaner.rs  main.rs
