[package]
name = "rustcleaner"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.5.0"
regex = "1.10.4"
dirs = "5.0.1"
clap = "4.5.4"
prettytable = "0.10"
indicatif = "0.17.8"
dialoguer = "0.11.0"
tempfile = "3.10.1"
trash = "4.1.1"
rayon = "1.5"
chrono = "0.4.38"
rand = "0.9.0-alpha.1"
filetime = "0.2.23"
tokio = { version = "1.38", features = ["full"] }
cron = "0.12.1"
nom = "7.1.3" # Mise à jour vers une version plus récente de nom
colored = "2.0"
terminal_size = "0.3.0"
